refactor: Order 저장 로직